--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container sticky-top">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#logo">
                 <img src="images/logo.png" alt="...">
@@ -28,7 +28,7 @@
                   <a class="nav-link" href="#backpack">Backpack</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#contact_us">Contact us</a>
+                  <a class="nav-link" href="#contact-us">Contact us</a>
                 </li>
               </ul>
             </div>
@@ -56,7 +56,7 @@
                         <h1>Cool Dude Headphone</h1>
                         <p>This is the best Headphone in the world for people who just want to waste time in front of funky world.</p>
                         <h1 class="price">$$420</h1>
-                        <button class="buy-now-button">Buy Now</button>
+                        <button class="buy-now-button">BUY NOW</button>
                     </div>
                     <div class="col-md-5">
                         <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -109,6 +109,87 @@
             </div>
         </div>
     </div>
+    <div class="container shoes" id="shoes">
+        <h3>Shoes</h3>
+        <div class="card-deck">
+          <div class="card">
+            <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Supply 350</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+              <h5>$120</h5>
+              <button class="buy-now-button">BUY NOW >></button>
+            </div>
+          </div>
+          <div class="card">
+            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Nike 320</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h5>$320</h5>
+              <button class="buy-now-button">BUY NOW >></button>
+            </div>
+          </div>
+          <div class="card">
+            <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red Max</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+              <h5>$350</h5>
+              <button class="buy-now-button">BUY NOW >></button>
+            </div>
+          </div>
+        </div>
+    </div>
+    <div class="container" id="backpack">
+        <h3>Backpack</h3>
+        <div class="card-deck">
+          <div class="card">
+            <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red Backpack</h5>
+              <h5>#125</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="card-footer">
+              <button class="buy-now-button">BUY NOW >></button>
+            </div>
+          </div>
+          <div class="card">
+            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Blue Backpack</h5>
+              <h5>$320</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <div class="card-footer">
+              <button class="buy-now-button">BUY NOW >></button>
+            </div>
+          </div>
+          <div class="card">
+            <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Black Backpack</h5>
+              <h5>$169</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+            <div class="card-footer">
+              <button class="buy-now-button">BUY NOW >></button>
+            </div>
+          </div>
+        </div>
+    </div>
+    <div class="container d-flex justify-content-center align-items-center orange-bg" id="contact-us">
+       <div>
+        <h3>LET'S STAY IN TOUCH</h3>
+        <h6>Get updates on sales, specials and more.</h6>
+        <input class="form-control" type="text">
+        <button class="buy-now-button">Submit</button>
+       </div>
+    </div>
+    <footer>
+      <p>©2020. Panda-Ecommerce.All rights reserved.</p>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
